# wezterm

./: Cargo.toml
assets/: elwood-icon.icns  wezterm.appdata.xml  wezterm.desktop
assets/macos/WezTerm.app/Contents/: Info.plist
config/: Cargo.toml
config/src/: config.rs  lib.rs  lua.rs
elwood-bridge/: Cargo.toml
elwood-bridge/docs/: CODE_REVIEW_DESIGN.md  INPUT_INTELLIGENCE_DESIGN.md  MCP_TERMINAL_DESIGN.md  PTY_DESIGN.md  RELEASE_BRANDING_DESIGN.md  WARP_TUI_UX_RESEARCH.md  example_config.lua
elwood-bridge/src/: autocorrect.rs  block.rs  commands.rs  completions.rs  config.rs  context.rs  diff.rs  diff_viewer.rs  domain.rs  editor.rs  file_browser.rs  formatter.rs  fuzzy_finder.rs  git_info.rs  git_ui.rs  history_search.rs  ide_bridge.rs  jobs.rs  keybindings.rs  launch_config.rs  lib.rs  lua_api.rs  markdown.rs  model_router.rs  multi_agent.rs  nl_classifier.rs  notebook.rs  notification.rs  observer.rs  palette.rs  pane.rs  plan_mode.rs  plan_viewer.rs  prediction_engine.rs  pty_inner.rs  recording.rs  redaction.rs  runtime.rs  screen.rs  semantic_bridge.rs  (+8 more)
elwood-bridge/src/mcp/: adapter.rs  client.rs  config.rs  mod.rs  protocol.rs  resources.rs  server.rs
env-bootstrap/src/: lib.rs
wezterm-gui/: Cargo.toml  build.rs
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/src/: commands.rs  main.rs  update.rs
wezterm-gui/src/overlay/: confirm_close_pane.rs
wezterm-gui/src/termwindow/: mod.rs
wezterm-version/: build.rs
window/src/os/macos/: app.rs
