[package]
name = "elwood-bridge"
version = "0.1.0"
edition = "2021"
publish = false
description = "Bridge between elwood-core agent and WezTerm terminal emulator"

[dependencies]
# WezTerm crates (workspace deps)
mux.workspace = true
config.workspace = true
termwiz.workspace = true
wezterm-term.workspace = true
wezterm-dynamic.workspace = true
downcast-rs.workspace = true
parking_lot.workspace = true
rangeset.workspace = true
portable-pty.workspace = true
url.workspace = true

# Shared async
async-trait.workspace = true
flume.workspace = true
smol.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = { workspace = true }
tracing = "0.1"

# Lua scripting for plugin hooks
mlua = { workspace = true, features = ["vendored", "lua54", "send", "serialize"] }

# Elwood core (path dep — outside this workspace)
elwood-core = { path = "../../../elwood-core" }

# Time
chrono.workspace = true

# Standard
# Unix process isolation for MCP server subprocesses
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Standard
anyhow.workspace = true
dirs-next.workspace = true
serde_json.workspace = true
log.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

# File walking (.gitignore-aware) for @ context attachments
ignore = "0.4"

# Diff engine for code review
similar = { version = "2", features = ["inline", "unicode"] }

# Markdown-to-ANSI rendering for agent responses
pulldown-cmark = "0.10"

# Session export: encryption + compression
sha2.workspace = true
flate2 = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "test-util"] }
tempfile = "3"
